--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ config.json
 # Browser session data
 .browser_session/
 
+# Private RSS feeds and sensitive data
+.private/
+
 # Downloads
 downloads/
 
